修复访谈报告按钮逻辑问题」} wait need no quote

--- a/web/index.html
+++ b/web/index.html
@@ -978,8 +978,8 @@
                                 </template>
                                 <template x-if="currentStep === 2">
                                     <button @click="confirmRestartResearch()"
-                                            :disabled="generatingReport"
-                                            :class="generatingReport ? 'bg-gray-300 text-gray-500 cursor-not-allowed' : 'btn-sage-blue text-white cursor-pointer'"
+                                            :disabled="isGeneratingCurrentReport()"
+                                            :class="isGeneratingCurrentReport() ? 'bg-gray-300 text-gray-500 cursor-not-allowed' : 'btn-sage-blue text-white cursor-pointer'"
                                             class="w-full py-2.5 rounded-lg font-medium transition-colors duration-200 flex items-center justify-center gap-2">
                                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"/>
