提交首页更新

--- a/web/index.html
+++ b/web/index.html
@@ -542,10 +542,10 @@
                         <span class="hidden sm:inline">报告</span>
                         <span class="sm:hidden">报告</span>
                     </button>
-                    <button @click="openGuide()"
+                    <button @click="window.location.href='help.html'"
                             class="px-3 md:px-4 py-2 rounded-lg transition-all duration-200 cursor-pointer text-sm font-medium text-primary hover:bg-surface-secondary">
-                        <span class="hidden sm:inline">指引</span>
-                        <span class="sm:hidden">指引</span>
+                        <span class="hidden sm:inline">帮助</span>
+                        <span class="sm:hidden">帮助</span>
                     </button>
                 </nav>
             </div>
