--- a/web/help.html
+++ b/web/help.html
@@ -897,7 +897,7 @@
                         <circle cx="11" cy="11" r="7"></circle>
                         <path d="M21 21l-3.5-3.5"></path>
                     </svg>
-                    <input id="searchInput" type="text" placeholder="搜索：生成报告 / 选择场景 / 访谈中断" />
+                    <input id="searchInput" type="text" placeholder="搜索：生成访谈报告 / 选择场景 / 访谈中断" />
                     <button class="search-clear" type="button" id="searchClear">清除</button>
                 </div>
                 <div class="search-panel" id="searchPanel">
@@ -927,14 +927,14 @@
                 </div>
             </div>
 
-            <section class="fade" id="getting-started" data-level="基础" data-related="features,workflow,scenarios" data-keywords="快速开始,创建会话,选择场景,生成报告,新手">
+            <section class="fade" id="getting-started" data-level="基础" data-related="features,workflow,scenarios" data-keywords="快速开始,创建会话,选择场景,生成访谈报告,新手">
                 <h2>快速开始</h2>
                 <div class="summary">4 步完成一次合格访谈：目标清晰、场景准确、回答具体、报告可交付。</div>
                 <div class="key-takeaway">结论：先把目标与场景讲清楚，再谈细节，报告质量会大幅提升。</div>
                 <div class="spec-box">
                     <div><strong>适用人群：</strong>首次使用者、需要快速完成访谈的用户。</div>
-                    <div><strong>目标输出：</strong>完成一次结构化访谈并生成报告。</div>
-                    <div><strong>完成标准：</strong>四大维度至少覆盖一轮，成功生成报告。</div>
+                    <div><strong>目标输出：</strong>完成一次结构化访谈并生成访谈报告。</div>
+                    <div><strong>完成标准：</strong>四大维度至少覆盖一轮，成功生成访谈报告。</div>
                 </div>
                 <div class="action-checklist">
                     <h4>行动清单</h4>
@@ -942,7 +942,7 @@
                         <li>明确一句话目标与关键约束</li>
                         <li>选择最贴近主题的场景模板</li>
                         <li>完成四大维度的基础问答</li>
-                        <li>确认摘要后生成报告</li>
+                        <li>确认需求摘要后生成访谈报告</li>
                     </ul>
                 </div>
                 <p>首次使用建议按以下流程操作，保证访谈质量与交付效率。</p>
@@ -961,7 +961,7 @@
                     <li>每道题以选项为主，必要时用“其他”补充。</li>
                     <li>回答越具体，系统越容易追问出本质。</li>
                 </ul>
-                <h3>步骤 4：确认并生成报告</h3>
+                <h3>步骤 4：确认需求摘要并生成访谈报告</h3>
                 <ul class="list">
                     <li>确认需求摘要，确保关键事实准确。</li>
                     <li>一键生成结构化报告，用于交付与评审。</li>
@@ -1104,7 +1104,7 @@
                     <li>预算控制：系统会根据模式与饱和度控制追问次数。</li>
                     <li>用户干预：可选择“跳过追问”或主动补充细节。</li>
                 </ul>
-                <div class="callout">如果你希望快速结束访谈，可在覆盖主要维度后直接生成报告。</div>
+                <div class="callout">如果你希望快速结束访谈，可在覆盖主要维度后直接生成访谈报告。</div>
             </section>
 
             <section class="fade" id="scenarios" data-level="核心" data-related="reports,best-practices,workflow" data-keywords="场景模板,自定义场景,需求调研,用户研究,技术方案,竞品分析">
@@ -1430,7 +1430,7 @@
                         </tr>
                         <tr>
                             <td>交付效率</td>
-                            <td>快（自动生成报告）</td>
+                            <td>快（自动生成访谈报告）</td>
                             <td>慢（人工整理）</td>
                         </tr>
                     </tbody>
@@ -1485,8 +1485,8 @@
                     <li>AI 无响应：检查网络或 API Key，稍后重试。</li>
                     <li>问题重复：补充更具体的事实，系统将生成更精准问题。</li>
                     <li>文件上传失败：确认格式与大小限制。</li>
-                    <li>会话异常：回到会话列表继续访谈。</li>
-                    <li>生成报告失败：尝试重新生成或减少输入噪声。</li>
+                    <li>会话异常：回到会话列表继续访谈流程。</li>
+                    <li>生成访谈报告失败：尝试重新生成或减少输入噪声。</li>
                 </ul>
             </section>
             <section class="fade" id="faq" data-level="参考" data-related="support,exceptions" data-keywords="常见问题,FAQ,问题排查">
@@ -1501,7 +1501,7 @@
                 <div class="faq-group">
                     <h3>访谈流程</h3>
                     <div class="faq-list">
-                        <div class="faq-item"><h4>访谈中断后还能继续吗？</h4><div class="faq-body">可以，回到会话列表点击“继续访谈”即可恢复。</div></div>
+                        <div class="faq-item"><h4>访谈中断后还能继续吗？</h4><div class="faq-body">可以，回到会话列表点击“继续访谈流程”即可恢复。</div></div>
                         <div class="faq-item"><h4>为什么问题会重复？</h4><div class="faq-body">系统会基于回答生成问题，若输入过于笼统可能重复，建议补充细节。</div></div>
                         <div class="faq-item"><h4>哪些字段决定访谈深度？</h4><div class="faq-body">访谈模式（标准/深度）与追问预算共同决定深度。</div></div>
                     </div>
@@ -1509,7 +1509,7 @@
                 <div class="faq-group">
                     <h3>报告与导出</h3>
                     <div class="faq-list">
-                        <div class="faq-item"><h4>为什么无法生成报告？</h4><div class="faq-body">确认四大维度至少有有效回答，且完成需求确认流程。</div></div>
+                        <div class="faq-item"><h4>为什么无法生成访谈报告？</h4><div class="faq-body">确认四大维度至少有有效回答，且完成需求摘要确认流程。</div></div>
                         <div class="faq-item"><h4>报告里会包含哪些图表？</h4><div class="faq-body">包含优先级矩阵、流程图、关联图与架构图。</div></div>
                         <div class="faq-item"><h4>支持哪些导出格式？</h4><div class="faq-body">Markdown / PDF / Word。</div></div>
                     </div>
